--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#d50000</color>
     <color name="primary">#e74c3c</color>
     <color name="primary_dark">#c13f31</color>
     <color name="transparent_black_ten_percent">#1A000000</color>
