--- a/app/src/main/res/layout/nav_header_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_dashboard.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
+    android:layout_height="176dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/red_button_bg"
     android:gravity="bottom"
@@ -24,7 +24,7 @@
             android:layout_height="80dp"
             android:background="@drawable/circle"
             android:contentDescription="@string/nav_header_desc"
-            android:src="@mipmap/blood_bank_ic_launcher_foreground" />
+            android:src="@drawable/blood_bank_ic_launcher_foreground" />
 
         <TextView
             android:layout_marginTop="10dp"
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:paddingTop="8dp"
             android:text="@string/nav_header_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@android:color/widget_edittext_dark"
@@ -43,7 +43,6 @@
             android:id="@+id/UserEmailView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:text="@string/nav_header_subtitle"
             android:textColor="@android:color/widget_edittext_dark" />
 
