--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,83 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:fillViewport="true"
     android:background="@drawable/red_button_bg"
     tools:context=".activities.LoginActivity">
 
     <LinearLayout
-        android:padding="10dp"
-        android:gravity="center"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/circle"
-                android:src="@drawable/blood_bank_icon_round" />
-
-
-        </LinearLayout>
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginBottom="24dp"
+            android:src="@drawable/blood_bank_icon_round"
+            android:background="@drawable/circle"
+            android:contentDescription="@string/app_name" />
 
         <EditText
-            android:textColor="@android:color/white"
             android:id="@+id/input_username"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
+            android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
-            android:hint="@string/prompt_email" />
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/darker_gray"
+            android:background="@drawable/edit_text_bg"
+            android:padding="12dp"
+            android:layout_marginBottom="16dp" />
 
         <EditText
-            android:textColor="@android:color/white"
             android:id="@+id/input_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
+            android:hint="@string/prompt_password"
             android:inputType="textPassword"
-            android:hint="@string/prompt_password" />
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/darker_gray"
+            android:background="@drawable/edit_text_bg"
+            android:padding="12dp"
+            android:layout_marginBottom="24dp" />
 
-        <Button
-            android:textAllCaps="false"
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="@string/action_sign_in_short"
             android:textStyle="bold"
-            android:background="@drawable/signin_btn"
+            android:textAllCaps="false"
             android:textColor="@color/primary"
-            android:text="@string/action_sign_in_short" />
+            android:background="@drawable/signin_btn"
+            android:layout_marginBottom="16dp" />
 
         <Button
-            android:textAllCaps="false"
             android:id="@+id/button_register"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:textColor="@android:color/white"
-            android:background="@drawable/transparent_black_ten_percent"
-            android:text="@string/register" />
-
-        <Button
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="@string/register"
             android:textAllCaps="false"
-            android:id="@+id/button_forgot_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="2dp"
             android:textColor="@android:color/white"
             android:background="@drawable/transparent_black_ten_percent"
-            android:text="@string/forgotpass" />
+            android:layout_marginBottom="8dp" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:indeterminate="true" />
 
     </LinearLayout>
-
 </ScrollView>
