--- a/app/src/main/res/layout/request_list_item.xml
+++ b/app/src/main/res/layout/request_list_item.xml
@@ -1,16 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <LinearLayout
-        android:background="@drawable/red_button_bg"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="#e74c3c"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
             android:layout_gravity="center"
+            android:contentDescription="Blood img"
             android:padding="5dp"
             android:src="@drawable/ic_blood_transfusion"
             android:layout_width="70dp"
@@ -22,53 +18,65 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/targetBG"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
                     android:text="AB+"
-                    android:textColor="#F8F8F8"
+                    android:textColor="#FFFFFF"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
                     android:text=" Blood Donor!"
+                    android:textColor="#FFECEC"
+                    android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
                     android:text="Contact: "
+                    android:textColor="#FFECEC"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
                     android:id="@+id/targetCN"
                     android:text="+8801234567890"
+                    android:textColor="#FFFFFF"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
+
             <TextView
                 android:id="@+id/reqstUser"
                 android:text="Requested by: Alamin Hossain"
+                android:textColor="#FFFFFF"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/posted"
                 android:text="Posted: 11:30 PM, 17/10/2018"
+                android:textColor="#FFECEC"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
             <TextView
                 android:id="@+id/reqstLocation"
                 android:text="From: Kushtia, Khulna"
+                android:textColor="#FFFFFF"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
-    </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
+
